# masters-example

models/starwars/: Cargo.toml
starwars/: Cargo.toml
