[package]
name = "starwars-example"
version = "0.1.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[dependencies]
tide = "0.16"
async-std = "1.9.0"
starwars = { path = "../models/starwars" }
async-graphql = "3.0.31"
async-graphql-tide = "3.0.31"

[dev-dependencies]
serde_json = "1.0.51"
surf = "2.0.0-alpha.5"
